<resources>
    <string name="app_name">Stone Age</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="settings">Settings</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="heading_recent">Discover</string>
    <string name="heading_my_posts">My Offers</string>
    <string name="heading_my_top_posts">My Top Offers</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_out">Signed Out</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="title_activity_user_information">UserInformation</string>

    <string name="send_cap">SEND</string>
    <string name="stoneage">Stone Age</string>
    <string name="confirm">Confirm</string>
    <string name="my_accepted_offer">My Accepted Offers</string>
    <string name="my_posts">My Posts</string>
    <string name="offers_of_post">Offers of this Post</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="please_rate_trade">Please rate your trade with </string>
    <string name="share_on">Share On  </string>
    <string name="finish">Finish</string>
    <string name="send_offer">SEND OFFER</string>
    <string name="post">POST</string>
    <string name="hello_accept">Hello, I accept your offer of </string>
    <string name="check_accepted">. Please check your Accepted Offers page and rate our trade!</string>
    <string name="sorry_reject">Sorry I already accepted another offer and I had to reject your offer of </string>
    <string name="please_check_other">. Please check other posts on the Main Page!</string>
    <string name="system">System</string>
    <string name="brightness">Brightness</string>
    <string name="auto_login">Automatically Login Me In</string>
    <string name="swap">Let\'s Swap!</string>
    <string name="signin_google">GOOGLE SIGN-IN</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="introduction">Introduction</string>
    <string name="back">Back</string>
    <string name="my_information">My Information</string>
    <string name="name">Name</string>
    <string name="save">SAVE</string>
    <string name="item">ITEM</string>
    <string name="search">Search</string>
    <string name="user">USER</string>
    <string name="write_address">Write your address</string>
    <string name="edit">Edit</string>
    <string name="accept">Accept</string>
    <string name="loading">loading…</string>
    <string name="select_location">select location:\n</string>
    <string name="posting">Posting…</string>
    <string name="hello_send_offer">Hello, I send you an offer to trade your </string>
    <string name="with_my"> with my </string>
    <string name="please_check_postoffer">. Please check your Post\'s Offer page</string>
    <string name="sending">Sending…</string>
    <string name="signin_failed">Sign In Failed</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="post_small">Post</string>
    <string name="message">Message</string>
    <string name="me">Me</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="take_photo">Take Photo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_select_address">Map</string>


</resources>
