<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24px"
        android:title="@string/home"
         />
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_baseline_add_location_24px"
        android:title="@string/map" />
    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_baseline_add_box_24px"
        android:title="@string/post_small" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_baseline_chat_24px"
        android:title="@string/message"/>

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/ic_baseline_account_box_24px"
        android:title="@string/me"/>

</menu>