<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_rateother"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_centerHorizontal="true"
        android:text="@string/please_rate_trade"
        android:textSize="20dp" />

    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/starBar"
        android:layout_below="@id/textView_rateother"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:isIndicator="false"
        android:rating="5" />

    <TextView
        android:id="@+id/textView_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/starBar"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        tools:text="4.0/5.0" />
    <Button
        android:id="@+id/button_facebook"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView_rate"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:drawableRight="@drawable/com_facebook_button_icon_white"
        android:background="@drawable/round_corner_bg"
        android:textColor="@color/white"
        android:text="@string/share_on" />
    <Button
        android:id="@+id/button_submitrate"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_facebook"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/round_corner_bg"
        android:textColor="@color/white"
        android:text="@string/finish" />
    <ImageView
        android:id="@+id/BackImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:tint="@color/grey_500"
        app:srcCompat="@drawable/ic_back_icon" />

</RelativeLayout>