<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/StoneAgeIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/stone_icon" />

    <TextView
        android:id="@+id/StoneAgeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:layout_below="@id/StoneAgeIcon"
        android:layout_centerHorizontal="true"
        android:text="Stone Age"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/StoneAgeTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/StoneAgeTextView"
        android:layout_centerHorizontal="true"
        android:fontFamily="casual"
        android:text="Let's Swap!"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/layoutEmailPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:layout_below="@id/StoneAgeTextView2">

        <EditText
            android:id="@+id/fieldEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/fieldPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </LinearLayout>


    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutEmailPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:background="@drawable/round_corner_bg"
        />




    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSignIn"
        android:text="@string/sign_up"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:background="@drawable/round_corner_bg"/>

    <Button
        android:id="@+id/buttonGoogle"
        android:layout_below="@+id/buttonSignUp"
        android:layout_centerHorizontal="true"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:background="@drawable/round_corner_bg"
        android:drawableStart="@drawable/ic_google"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:drawablePadding="10dp"
        android:text="SIGN WITH GOOGLE" />


</RelativeLayout>
