<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    >

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:padding="20dp"
        android:background="@drawable/round_corner_post_detail">


        <EditText
            android:id="@+id/fieldTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:maxLines="1"
            tools:text="An apple" />

        <EditText
            android:id="@+id/editText_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fieldTitle"
            android:layout_marginTop="5dp"
            android:maxLines="4"
            android:hint="@string/description"
            tools:text="@string/lorem"
            />

        <include
            android:id="@+id/newAddressLayout"
            layout="@layout/include_address_input"
            android:layout_below="@id/editText_description"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabSubmitPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_navigation_check_24" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabCancelPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:backgroundTint="@color/colorPrimary"
            android:tint="@color/white"
            android:src="@drawable/ic_delete"
            />
        <ImageView
            android:id="@+id/uploadImageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_below="@id/newAddressLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/ic_picture" />



    </RelativeLayout>
</FrameLayout>