<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/EditMenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/EditIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_edit_24px"
            />

        <TextView
            android:id="@+id/EditTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/EditIcon"
            android:paddingStart="10dp"
            android:textSize="25sp"
            android:text="@string/edit" />

        <ImageView
            android:id="@+id/menuEnterImageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:tint="@color/grey_500"
            android:src="@drawable/ic_next_24" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/EditMenuItem"
        />
    <RelativeLayout
        android:id="@+id/PostMenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/EditMenuItem">

        <ImageView
            android:id="@+id/PostIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_history_24px" />

        <TextView
            android:id="@+id/PostTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/PostIcon"
            android:paddingStart="10dp"
            android:text="@string/my_posts"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/menuEnterImageView2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:tint="@color/grey_500"
            android:src="@drawable/ic_next_24" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/PostMenuItem"
        />

    <RelativeLayout
        android:id="@+id/OfferMenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/PostMenuItem">

        <ImageView
            android:id="@+id/OfferIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:src="@drawable/ic_like_24px" />

        <TextView
            android:id="@+id/OfferTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/OfferIcon"
            android:paddingStart="10dp"
            android:text="@string/my_accepted_offer"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/menuEnterImageView4"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:tint="@color/grey_500"
            android:src="@drawable/ic_next_24" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/OfferMenuItem"
        />
</RelativeLayout>